# Python

./: .gitignore  LICENSE  README.md
Leetcode/: add-digit.py  addStrings.py  arrangingConins.py  bestStockDay.py  breakInterger.py  calculate.py  containDuplicate.py  containDuplicate2.py  containDuplicate3.py  countPrime.py  countSimilarPairs.py  create_leet_file.py  decodeString.py  digitSet.py  emptyArray.py  factor.py  factor3.py  fibonacci.py  fizzbuzz.py  fourDivisors.py  happyNumber.py  integerReplace.py  integerToNumber.py  isSubsequence.py  jewelAndStone.py  last.py  line.py  linklist.py  longestCommonPrefix.py  longestPalindromicSubstring.py  longestSubstringWithoutRepeat.py  manyDivisbileBy11.py  mergeString.py  missing.py  muliple-sum.py  muliple2.py  multiplyStr.py  numDecodings.py  numberOfArithmeticTriplets.py  palindrome.py  (+38 more)
Programs/: animation.py  birth.py  browser.py  command.py  converter.py  data-structure.py  dirfind.py  equation.py  facts.py  file-info.py  formater.py  getch.py  getip.py  goalTracker.py  guess.py  helper.py  (+13 more)
Projects/Flask WS/: main.py  pyproject.toml
Projects/Flask WS/templates/: index.html
Projects/Router/: browser.py  cookies.json  form.html  form_data.py  login.html  main.js  main.py  pyproject.toml  util.js
Simulation/Banking/: main.py  pyproject.toml  readme
Simulation/Banking/bank/: account.py  models.py  route.py
Simulation/Banking/common/: __init__.py  helper.py  setting.py  sqlite.db
Simulation/Banking/user/: __init__.py  models.py  route.py
Simulation/Banking/user/auth/: authenticate.py  jwt_handler.py
(+141 files in other folders)
